--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 <body>
     Sandwiches <button>Iron Man</button>
 
+    <div id="slides">
+      <div class="slides-container">
+        <img src="http://via.placeholder.com/300" alt="">
+        <img src="http://via.placeholder.com/300" alt="">
+      </div>
+    </div>
+
 
     <script src="js/jquery.superslides.min.js">
 
