added my own images in the img folder and referenced them in index.html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
     <div id="slides">
       <div class="slides-container">
-        <img src="http://via.placeholder.com/300" alt="">
-        <img src="http://via.placeholder.com/300" alt="">
+        <img src="img/slide1.jpg" alt="">
+        <img src="img/slide2.jpg" alt="">
+        <img src="img/slide3.jpg" alt="">
       </div>
     </div>
 
