--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" type="text/css" href="css/superslides.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
-    Sandwiches <button>Iron Man</button>
+    <!--Sandwiches <button>Iron Man</button> -->
 
     <div id="slides">
       <div class="slides-container">
@@ -21,6 +22,11 @@
         <img src="img/slide2.jpg" alt="">
         <img src="img/slide3.jpg" alt="">
       </div>
+
+      <nav class="slides-navigation">
+        <a href="#" class="next"></a>
+        <a href="#" class="prev"></a>
+      </nav>
     </div>
 
 
