--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
     <!--Sandwiches <button>Iron Man</button> -->
 
     <div id="slides">
-      <div class="slides-container">
-        <img src="img/slide1.jpg" alt="">
-        <img src="img/slide2.jpg" alt="">
-        <img src="img/slide3.jpg" alt="">
-      </div>
+        <div class="overlay"></div>
 
-      <nav class="slides-navigation">
-        <a href="#" class="next"></a>
-        <a href="#" class="prev"></a>
-      </nav>
+        <div class="slides-container">
+            <img src="img/slide1.jpg" alt="">
+            <img src="img/slide2.jpg" alt="">
+            <img src="img/slide3.jpg" alt="">
+        </div>
+
+        <nav class="slides-navigation">
+            <a href="#" class="next"></a>
+            <a href="#" class="prev"></a>
+        </nav>
     </div>
 
 
