added a title section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
             <img src="img/slide3.jpg" alt="">
         </div>
 
+        <div class="titleMessage">
+            <div class="heading">
+                <p class="main"> Efosa Osazuwa </p>
+                <p class="sub">Data Scientist</p>
+            </div>
+        </div>
+
         <nav class="slides-navigation">
             <a href="#" class="next"></a>
             <a href="#" class="prev"></a>
