implemented typed javascript effect on sub title message

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="titleMessage">
             <div class="heading">
                 <p class="main"> Efosa Osazuwa </p>
-                <p class="sub">Data Scientist</p>
+                <p class="sub typed"></p>
             </div>
         </div>
 
