create about section

--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
         </nav>
     </div>
 
+        <div class="container">
+
+            <div id="about" class="section">
+                <div class="row">
+
+                    <div class="col-md-5">
+                        <img src="img/slide1.jpg" class="aboutImage">
+                    </div>
+
+                    <div class="col-md-7">
+                        <h4>My Name is Efosa Osazuwa</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lacinia sollicitudin erat nec pulvinar. Vivamus sollicitudin nec leo vel condimentum. Nullam molestie ante in mi rutrum, eget mollis sapien tempus. Integer sed metus lorem. Maecenas accumsan magna dolor, non volutpat felis mollis a. Suspendisse venenatis ac risus a condimentum. Sed hendrerit enim quam, ac vestibulum enim posuere et. Donec quis purus pretium, aliquam arcu quis, aliquet tortor. Praesent tempor nunc sed enim faucibus sollicitudin. Fusce maximus feugiat libero vitae auctor. Vivamus sollicitudin volutpat diam, quis sagittis ex tempor sit amet. Cras porta quis tellus in auctor. Duis ut lorem euismod mi sagittis accumsan ut sed magna. Sed pulvinar nunc vitae lectus vestibulum imperdiet. Duis suscipit pharetra est ac interdum.</p>
+                        <p>Sed molestie tellus nec tellus convallis, iaculis convallis urna maximus. Cras a ex tortor. Pellentesque aliquam libero a elit iaculis hendrerit. Etiam tempor lorem id nibh gravida accumsan. Duis posuere velit in mauris tincidunt efficitur. Fusce at risus at quam tempus feugiat. Etiam ac elementum libero, vel pharetra neque. Mauris sagittis, justo sit amet dapibus semper, mi felis semper est, quis viverra dui dolor eu elit. Maecenas vel diam ut ante tristique ultrices. Fusce elementum mollis eros, condimentum vehicula enim vulputate sit amet. Praesent ac lacus gravida, tincidunt ex vitae, porta tortor. Donec venenatis purus sed justo laoreet placerat.</p>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
     <script src="js/jquery.superslides.min.js"></script>
     <script src="js/typed.min.js"></script>
