started title and description for skills section with some styling too

--- a/index.html
+++ b/index.html
@@ -58,6 +58,22 @@
 
     </div>
 
+    <div id="skills" class="section skillsSection">
+        <div class="container">
+
+            <div class= ""> <!--took out "row as the class because it was messing with center align" -->
+
+                <div class="md-col-12 text-center">
+                    <h2>Technical Skills</h2>
+                    <p>A representation of my proficiency in each skill</p>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
 
     <script src="js/jquery.superslides.min.js"></script>
     <script src="js/typed.min.js"></script>
