--- a/index.html
+++ b/index.html
@@ -69,18 +69,14 @@
                     <p>A representation of my proficiency in each skill</p>
 
                     <div class="owl-carousel owl-theme">
-                        <div class="item"><h4>1</h4></div>
-                        <div class="item"><h4>2</h4></div>
-                        <div class="item"><h4>3</h4></div>
-                        <div class="item"><h4>4</h4></div>
-                        <div class="item"><h4>5</h4></div>
-                        <div class="item"><h4>6</h4></div>
-                        <div class="item"><h4>7</h4></div>
-                        <div class="item"><h4>8</h4></div>
-                        <div class="item"><h4>9</h4></div>
-                        <div class="item"><h4>10</h4></div>
-                        <div class="item"><h4>11</h4></div>
-                        <div class="item"><h4>12</h4></div>
+                        <div class="skill">
+                            <span class="chart" data-percent="67">
+                                <span class="percent">67</span>
+                                <canvas width="150" height="150"></canvas>
+                            </span>
+                            <h4>Python</h4>
+                            <p>Used as central data science language</p>
+                        </div>
                     </div>
 
                 </div>
@@ -94,6 +90,7 @@
     <script src="js/jquery.superslides.min.js"></script>
     <script src="js/typed.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.easypiechart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
