added more skills

--- a/index.html
+++ b/index.html
@@ -70,12 +70,30 @@
 
                     <div class="owl-carousel owl-theme">
                         <div class="skill">
-                            <span class="chart" data-percent="67">
-                                <span class="percent">67</span>
+                            <span class="chart" data-percent="75">
+                                <span class="percent">75</span>
                                 <canvas width="150" height="150"></canvas>
                             </span>
                             <h4>Python</h4>
-                            <p>Used as central data science language</p>
+                            <p>Used as central purpose language as well as data science language</p>
+                        </div>
+
+                        <div class="skill">
+                            <span class="chart" data-percent="40">
+                                <span class="percent">40</span>
+                                <canvas width="150" height="150"></canvas>
+                            </span>
+                            <h4>R</h4>
+                            <p>Primary language for statistical analysis</p>
+                        </div>
+
+                        <div class="skill">
+                            <span class="chart" data-percent="60">
+                                <span class="percent">60</span>
+                                <canvas width="150" height="150"></canvas>
+                            </span>
+                            <h4>GCP</h4>
+                            <p>Completed a coursera certification and i feel very comfortable building pipelines in it</p>
                         </div>
                     </div>
 
