Added new skills section

--- a/index.html
+++ b/index.html
@@ -105,6 +105,37 @@
 
     </div>
 
+    <div id="stats" class="section statsSection">
+        <div class="container">
+
+            <div class= "row"> <!--took out "row as the class because it was messing with center align" -->
+
+                <div class="col-md-3 col-sm-6">
+
+                    <div class="squareItem">
+
+                        <div class="squareInnerContainer">
+
+                            <div class="squareIcon">
+
+                            </div>
+
+                            <div class="squareContent">
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
+
+    </div>
+
     <script src="js/jquery.superslides.min.js"></script>
     <script src="js/typed.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
