created and added styling to stats section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
                             </div>
 
                             <div class="squareContent">
+                                <h2>4</h2>
+                                <h3>Clients</h3>
 
                             </div>
 
