--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -117,7 +118,70 @@
                         <div class="squareInnerContainer">
 
                             <div class="squareIcon">
+                                <i class="fa fa-clock"></i>
+                            </div>
 
+                            <div class="squareContent">
+                                <h2>4</h2>
+                                <h3>Clients</h3>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+
+                    <div class="squareItem">
+
+                        <div class="squareInnerContainer">
+
+                            <div class="squareIcon">
+                                <i class="fa fa-clock"></i>
+                            </div>
+
+                            <div class="squareContent">
+                                <h2>4</h2>
+                                <h3>Clients</h3>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+
+                    <div class="squareItem">
+
+                        <div class="squareInnerContainer">
+
+                            <div class="squareIcon">
+                                <i class="fa fa-clock"></i>
+                            </div>
+
+                            <div class="squareContent">
+                                <h2>4</h2>
+                                <h3>Clients</h3>
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-md-3 col-sm-6">
+
+                    <div class="squareItem">
+
+                        <div class="squareInnerContainer">
+
+                            <div class="squareIcon">
+                                <i class="fa fa-clock"></i>
                             </div>
 
                             <div class="squareContent">
