--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             </div>
 
                             <div class="squareContent">
-                                <h2>4</h2>
+                                <h2 class="counter">400</h2>
                                 <h3>Clients</h3>
 
                             </div>
@@ -143,7 +143,7 @@
                             </div>
 
                             <div class="squareContent">
-                                <h2>4</h2>
+                                <h2 class="counter">500</h2>
                                 <h3>Clients</h3>
 
                             </div>
@@ -164,7 +164,7 @@
                             </div>
 
                             <div class="squareContent">
-                                <h2>4</h2>
+                                <h2 class="counter">4</h2>
                                 <h3>Clients</h3>
 
                             </div>
@@ -185,7 +185,7 @@
                             </div>
 
                             <div class="squareContent">
-                                <h2>4</h2>
+                                <h2 class="counter">90</h2>
                                 <h3>Clients</h3>
 
                             </div>
@@ -206,6 +206,8 @@
     <script src="js/typed.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.easypiechart.min.js"></script>
+    <script src="js/countUp.js"></script>
+    <script src="js/countUp-jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
