--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </nav>
     </div>
 
-    <div class="container">
+    <div class="container aboutSection">
 
         <div id="about" class="section">
             <div class="row">
@@ -198,6 +198,15 @@
 
             </div>
 
+        </div>
+
+    </div>
+
+    <div id="contact" class="section contactSection">
+        <div class="col-md-12 text-center">
+            <p class="subheading">Like what you see?</p>
+            <h2>I'd love to hear from you!</h2>
+            <a href="mailTo:efosazuwa0@gmail.com" class="contactButton">Get in touch!</a>
         </div>
 
     </div>
