--- a/index.html
+++ b/index.html
@@ -211,12 +211,45 @@
 
     </div>
 
+    <div id="portfolio" class="section">
+
+        <div class="container">
+
+            <div class="row">
+
+                <div class="heading">
+
+                    <h2>Portfolio</h2>
+
+                </div>
+
+                <div class="filter">
+
+                    <ul id="filters">
+
+                        <li><a href="#" data-filter="*" class="current">ALL</a></li>
+                        <li><a href="#" data-filter=".viz">VIZ</a></li>
+                        <li><a href="#" data-filter=".econ">ECONOMETRICS</a></li>
+                        <li><a href="#" data-filter=".ml">ML</a></li>
+                        <li><a href="#" data-filter=".apps">APPS</a></li>
+
+                    </ul>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
     <script src="js/jquery.superslides.min.js"></script>
     <script src="js/typed.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.easypiechart.min.js"></script>
     <script src="js/countUp.js"></script>
     <script src="js/countUp-jquery.js"></script>
+    <script src="js/isotope.pkgd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
