--- a/index.html
+++ b/index.html
@@ -237,6 +237,24 @@
 
                 </div>
 
+                <div class="itemsContainer">
+
+                    <ul class="items">
+
+                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+                            <div class="item">
+
+                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                </video>
+
+                            </div>
+                        </li>
+
+                    </ul>
+
+                </div>
+
             </div>
 
         </div>
