added open image and open project links

--- a/index.html
+++ b/index.html
@@ -248,6 +248,17 @@
                                 <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
                                 </video>
 
+                                <div class="icons">
+                                    <a href="img/portfolio/thumbnails/project_under_construction.mp4" title="View Image" class="openButton">
+                                        <i class="fa fa-search"></i>
+                                    </a>
+
+                                    <a href="#" target="_blank" title="View Project" class="projectLink">
+                                        <i class="fa fa-link"></i>
+                                    </a>
+
+                                </div>
+
                             </div>
                         </li>
 
