--- a/index.html
+++ b/index.html
@@ -263,6 +263,132 @@
                             </div>
                         </li>
 
+                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+                            <div class="item">
+
+                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                </video>
+
+                                <div class="icons">
+                                    <a href="img/portfolio/thumbnails/project_under_construction.mp4" title="View Image" class="openButton" data-fancybox data-caption="Place holder Text">
+                                        <i class="fa fa-search"></i>
+                                    </a>
+
+                                    <a href="#" target="_blank" title="View Project" class="projectLink">
+                                        <i class="fa fa-link"></i>
+                                    </a>
+
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+                            <div class="item">
+
+                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                </video>
+
+                                <div class="icons">
+                                    <a href="img/portfolio/thumbnails/project_under_construction.mp4" title="View Image" class="openButton" data-fancybox data-caption="Place holder Text">
+                                        <i class="fa fa-search"></i>
+                                    </a>
+
+                                    <a href="#" target="_blank" title="View Project" class="projectLink">
+                                        <i class="fa fa-link"></i>
+                                    </a>
+
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+                            <div class="item">
+
+                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                </video>
+
+                                <div class="icons">
+                                    <a href="img/portfolio/thumbnails/project_under_construction.mp4" title="View Image" class="openButton" data-fancybox data-caption="Place holder Text">
+                                        <i class="fa fa-search"></i>
+                                    </a>
+
+                                    <a href="#" target="_blank" title="View Project" class="projectLink">
+                                        <i class="fa fa-link"></i>
+                                    </a>
+
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+                            <div class="item">
+
+                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                </video>
+
+                                <div class="icons">
+                                    <a href="img/portfolio/thumbnails/project_under_construction.mp4" title="View Image" class="openButton" data-fancybox data-caption="Place holder Text">
+                                        <i class="fa fa-search"></i>
+                                    </a>
+
+                                    <a href="#" target="_blank" title="View Project" class="projectLink">
+                                        <i class="fa fa-link"></i>
+                                    </a>
+
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+                            <div class="item">
+
+                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                </video>
+
+                                <div class="icons">
+                                    <a href="img/portfolio/thumbnails/project_under_construction.mp4" title="View Image" class="openButton" data-fancybox data-caption="Place holder Text">
+                                        <i class="fa fa-search"></i>
+                                    </a>
+
+                                    <a href="#" target="_blank" title="View Project" class="projectLink">
+                                        <i class="fa fa-link"></i>
+                                    </a>
+
+                                </div>
+
+                            </div>
+                        </li>
+
+                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+                            <div class="item">
+
+                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                </video>
+
+                                <div class="icons">
+                                    <a href="img/portfolio/thumbnails/project_under_construction.mp4" title="View Image" class="openButton" data-fancybox data-caption="Place holder Text">
+                                        <i class="fa fa-search"></i>
+                                    </a>
+
+                                    <a href="#" target="_blank" title="View Project" class="projectLink">
+                                        <i class="fa fa-link"></i>
+                                    </a>
+
+                                </div>
+
+                            </div>
+                        </li>
+
                     </ul>
 
                 </div>
