added overlay to each image in portfolio section

--- a/index.html
+++ b/index.html
@@ -260,26 +260,7 @@
 
                                 </div>
 
-                            </div>
-                        </li>
-
-                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-
-                            <div class="item">
-
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
-                                </video>
-
-                                <div class="icons">
-                                    <a href="img/portfolio/thumbnails/project_under_construction.mp4" title="View Image" class="openButton" data-fancybox data-caption="Place holder Text">
-                                        <i class="fa fa-search"></i>
-                                    </a>
-
-                                    <a href="#" target="_blank" title="View Project" class="projectLink">
-                                        <i class="fa fa-link"></i>
-                                    </a>
-
-                                </div>
+                                <div class="imageOverlay"></div>
 
                             </div>
                         </li>
@@ -302,26 +283,7 @@
 
                                 </div>
 
-                            </div>
-                        </li>
-
-                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-
-                            <div class="item">
-
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
-                                </video>
-
-                                <div class="icons">
-                                    <a href="img/portfolio/thumbnails/project_under_construction.mp4" title="View Image" class="openButton" data-fancybox data-caption="Place holder Text">
-                                        <i class="fa fa-search"></i>
-                                    </a>
-
-                                    <a href="#" target="_blank" title="View Project" class="projectLink">
-                                        <i class="fa fa-link"></i>
-                                    </a>
-
-                                </div>
+                                <div class="imageOverlay"></div>
 
                             </div>
                         </li>
@@ -344,26 +306,7 @@
 
                                 </div>
 
-                            </div>
-                        </li>
-
-                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
-
-                            <div class="item">
-
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
-                                </video>
-
-                                <div class="icons">
-                                    <a href="img/portfolio/thumbnails/project_under_construction.mp4" title="View Image" class="openButton" data-fancybox data-caption="Place holder Text">
-                                        <i class="fa fa-search"></i>
-                                    </a>
-
-                                    <a href="#" target="_blank" title="View Project" class="projectLink">
-                                        <i class="fa fa-link"></i>
-                                    </a>
-
-                                </div>
+                                <div class="imageOverlay"></div>
 
                             </div>
                         </li>
@@ -385,6 +328,77 @@
                                     </a>
 
                                 </div>
+
+                                <div class="imageOverlay"></div>
+
+                            </div>
+                        </li>
+
+                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+                            <div class="item">
+
+                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                </video>
+
+                                <div class="icons">
+                                    <a href="img/portfolio/thumbnails/project_under_construction.mp4" title="View Image" class="openButton" data-fancybox data-caption="Place holder Text">
+                                        <i class="fa fa-search"></i>
+                                    </a>
+
+                                    <a href="#" target="_blank" title="View Project" class="projectLink">
+                                        <i class="fa fa-link"></i>
+                                    </a>
+
+                                </div>
+
+                                <div class="imageOverlay"></div>
+
+                            </div>
+                        </li>
+
+                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+                            <div class="item">
+
+                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                </video>
+
+                                <div class="icons">
+                                    <a href="img/portfolio/thumbnails/project_under_construction.mp4" title="View Image" class="openButton" data-fancybox data-caption="Place holder Text">
+                                        <i class="fa fa-search"></i>
+                                    </a>
+
+                                    <a href="#" target="_blank" title="View Project" class="projectLink">
+                                        <i class="fa fa-link"></i>
+                                    </a>
+
+                                </div>
+
+                                <div class="imageOverlay"></div>
+
+                            </div>
+                        </li>
+
+                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+
+                            <div class="item">
+
+                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                </video>
+
+                                <div class="icons">
+                                    <a href="img/portfolio/thumbnails/project_under_construction.mp4" title="View Image" class="openButton" data-fancybox data-caption="Place holder Text">
+                                        <i class="fa fa-search"></i>
+                                    </a>
+
+                                    <a href="#" target="_blank" title="View Project" class="projectLink">
+                                        <i class="fa fa-link"></i>
+                                    </a>
+
+                                </div>
+
+                                <div class="imageOverlay"></div>
 
                             </div>
                         </li>
