--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
                     <ul class="items">
 
-                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                        <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                             <div class="item">
 
@@ -265,7 +265,7 @@
                             </div>
                         </li>
 
-                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                        <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                             <div class="item">
 
@@ -288,7 +288,7 @@
                             </div>
                         </li>
 
-                        <li class="viz col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                        <li onclick="" class="viz col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                             <div class="item">
 
@@ -311,7 +311,7 @@
                             </div>
                         </li>
 
-                        <li class="econ col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                        <li onclick="" class="econ col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                             <div class="item">
 
@@ -334,7 +334,7 @@
                             </div>
                         </li>
 
-                        <li class="ml col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                        <li onclick="" class="ml col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                             <div class="item">
 
@@ -357,7 +357,7 @@
                             </div>
                         </li>
 
-                        <li class="econ col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                        <li onclick="" class="econ col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                             <div class="item">
 
@@ -380,7 +380,7 @@
                             </div>
                         </li>
 
-                        <li class="ml col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                        <li onclick="" class="ml col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                             <div class="item">
 
@@ -403,7 +403,7 @@
                             </div>
                         </li>
 
-                        <li class="ml col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                        <li onclick="" class="ml col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                             <div class="item">
 
@@ -426,7 +426,7 @@
                             </div>
                         </li>
 
-                        <li class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                        <li onclick="" class="apps col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                             <div class="item">
 
@@ -449,7 +449,7 @@
                             </div>
                         </li>
 
-                        <li class="viz col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                        <li onclick="" class="viz col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                             <div class="item">
 
@@ -472,7 +472,7 @@
                             </div>
                         </li>
 
-                        <li class="econ viz col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                        <li onclick="" class="econ viz col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                             <div class="item">
 
@@ -495,7 +495,7 @@
                             </div>
                         </li>
 
-                        <li class="ml app col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                        <li onclick="" class="ml app col-xs-6 col-sm-4 col-md-3 col-lg-3">
 
                             <div class="item">
 
