--- a/index.html
+++ b/index.html
@@ -528,6 +528,16 @@
 
     </div>
 
+    <div class="copyrightSection">
+
+        <div class="col-md-12 text-center">
+
+            <p>&copy; Copyright Efosa Osazuwa 2019</p>
+
+        </div>
+
+    </div>
+
     <script src="js/jquery.superslides.min.js"></script>
     <script src="js/typed.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
