--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
     </div>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav id="navigation" class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="#">Navbar</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
