added preloader to my page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 </head>
 
 <body>
-    <!--Sandwiches <button>Iron Man</button> -->
+    <div class="loader">
+
+        <div class="inner">
+
+        </div>
+
+    </div>
 
     <div id="slides">
         <div class="overlay"></div>
