fixed bug where overlay would be showing beyond the edges of the video if the screen was a different size

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
                             <div class="item">
 
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                <video loop src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
                                 </video>
 
                                 <div class="icons">
@@ -315,7 +315,7 @@
 
                             <div class="item">
 
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                <video loop src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
                                 </video>
 
                                 <div class="icons">
@@ -338,7 +338,7 @@
 
                             <div class="item">
 
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                <video loop src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
                                 </video>
 
                                 <div class="icons">
@@ -361,7 +361,7 @@
 
                             <div class="item">
 
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                <video loop src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
                                 </video>
 
                                 <div class="icons">
@@ -384,7 +384,7 @@
 
                             <div class="item">
 
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                <video loop src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
                                 </video>
 
                                 <div class="icons">
@@ -407,7 +407,7 @@
 
                             <div class="item">
 
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                <video loop src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
                                 </video>
 
                                 <div class="icons">
@@ -430,7 +430,7 @@
 
                             <div class="item">
 
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                <video loop src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
                                 </video>
 
                                 <div class="icons">
@@ -453,7 +453,7 @@
 
                             <div class="item">
 
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                <video loop src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
                                 </video>
 
                                 <div class="icons">
@@ -476,7 +476,7 @@
 
                             <div class="item">
 
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                <video loop src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
                                 </video>
 
                                 <div class="icons">
@@ -499,7 +499,7 @@
 
                             <div class="item">
 
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                <video loop src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
                                 </video>
 
                                 <div class="icons">
@@ -522,7 +522,7 @@
 
                             <div class="item">
 
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                <video loop src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
                                 </video>
 
                                 <div class="icons">
@@ -545,7 +545,7 @@
 
                             <div class="item">
 
-                                <video loop width = "300" height="300"src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
+                                <video loop src="img/portfolio/thumbnails/project_under_construction.mp4" autoplay>
                                 </video>
 
                                 <div class="icons">
