Changed the appropriate lines for adding the owl.carousel.js file

--- a/index.html
+++ b/index.html
@@ -143,6 +143,34 @@
                             <h4>GCP</h4>
                             <p>Completed a coursera certification and i feel very comfortable building pipelines in it</p>
                         </div>
+
+                        <div class="skill">
+                            <span class="chart" data-percent="60">
+                                <span class="percent">60</span>
+                                <canvas width="150" height="150"></canvas>
+                            </span>
+                            <h4>AWS</h4>
+                            <p>Completed a coursera certification and i feel very comfortable building pipelines in it</p>
+                        </div>
+
+                        <div class="skill">
+                            <span class="chart" data-percent="60">
+                                <span class="percent">60</span>
+                                <canvas width="150" height="150"></canvas>
+                            </span>
+                            <h4>Tensorflow</h4>
+                            <p>Completed a coursera certification and i feel very comfortable building pipelines in it</p>
+                        </div>
+
+                        <div class="skill">
+                            <span class="chart" data-percent="30">
+                                <span class="percent">30</span>
+                                <canvas width="150" height="150"></canvas>
+                            </span>
+                            <h4>D3</h4>
+                            <p>Completed a coursera certification and i feel very comfortable building pipelines in it</p>
+                        </div>
+
                     </div>
 
                 </div>
@@ -586,7 +614,7 @@
 
     <script src="js/jquery.superslides.min.js"></script>
     <script src="js/typed.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/owl.carousel.js"></script>
     <script src="js/jquery.easypiechart.min.js"></script>
     <script src="js/countUp.js"></script>
     <script src="js/countUp-jquery.js"></script>
